@@ -1,4 +1,4 @@
-/* utils.h
+/* luatex-common.h
 
    Copyright 1996-2006 Han The Thanh <thanh@pdftex.org>
    Copyright 2006-2012 Taco Hoekwater <taco@luatex.org>
@@ -17,34 +17,18 @@
    You should have received a copy of the GNU General Public License along
    with LuaTeX; if not, see <http://www.gnu.org/licenses/>. */
 
-/* $Id: utils.h 3261 2009-12-18 11:38:21Z taco $ */
+/* $Id: luatex-common.h 4054 2011-01-10 19:05:54Z hhenkel $ */
 
-#ifndef UTILS_H
-#  define UTILS_H
+/* This file contains declarations used in C code as well as in C++ code.
+*/
 
-extern int epochseconds;
-extern int microseconds;
-extern char *pdftex_banner;
+#ifndef LUATEX_COMMON_H
+#  define LUATEX_COMMON_H
 
-void make_subset_tag(fd_entry *);
-
+/* utils.c */
 __attribute__ ((format(printf, 1, 2)))
-void tex_printf(const char *, ...);
+extern void pdftex_warn(const char *fmt, ...);
+__attribute__ ((noreturn, format(printf, 1, 2)))
+extern void pdftex_fail(const char *fmt, ...);
 
-void garbage_warning(void);
-void make_pdftex_banner(void);
-size_t xfwrite(void *, size_t size, size_t nmemb, FILE *);
-int xfflush(FILE *);
-int xgetc(FILE *);
-int xputc(int, FILE *);
-scaled ext_xn_over_d(scaled, scaled, scaled);
-char *stripzeros(char *);
-void initversionstring(char **versions);
-extern void check_buffer_overflow(int wsize);
-extern void check_pool_overflow(int wsize);
-
-extern char *cur_file_name;
-
-#  include "luatex-common.h"
-
-#endif                          /* UTILS_H */
+#endif /* LUATEX_COMMON_H */
