@@ -3,6 +3,12 @@
 	* lua/luainit.w (lua_initialize): Avoid using asprintf().
 	* utils/utils.w (initversionstring): Avoid using asprintf().
 
+	One and only one prototype per function.
+	* image/epdf.h, utils/utils.h: Add #include "luatex-common.h"
+	and move pdftex_{fail,warn} prototypes from here ...
+	* luatex-common.h (new): ... to here.
+	* am/libluatex.am (libluatex_a_SOURCES): Add the new file.
+
 2012-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* lua/loslibext.c os_gettimeofday): Use int64_t (from W32TeX).
